Complete GitHub Workflow Sentinel implementation
- Implement real-time workflow monitoring with GitHub API
- Add state persistence to track events between runs
- Add memory management (cleanup old events after 1h)
- Limit state file growth (max 1000 event IDs)
- Add HTTP timeouts and comprehensive error handling
- Add JUnit tests for all core components
- Add professional README with usage examples